# iot-etl-pipeline

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
config/: path_config.py
docs/: getting-started.md  orchestration-docker.md
src/extract/: extractor.py  http_client.py  storage.py
src/load/: __init__.py  loader.py
src/load/writers/: __init__.py  base.py  csv_writer.py
src/transform/: transformer.py
src/transform/builders/dimensions/: derived_dimensions.py  simple_dimensions.py
src/transform/builders/facts/: fact_maintenance.py  fact_production.py  fact_sensor_readings.py
src/transform/cleaners/: defects_cleaner.py  maintenance_logs_cleaner.py
tests/unit/extract/: test_extractor.py  test_http_client.py  test_storage.py
tests/unit/load/: test_loader.py
tests/unit/load/writers/: test_csv_writer.py
tests/unit/transform/: test_transformer.py
tests/unit/transform/builders/facts/: test_fact_alerts.py  test_fact_maintenance.py  test_fact_production.py  test_fact_quality.py  test_fact_sensor_readings.py
tests/unit/transform/cleaners/: test_alerts_cleaner.py  test_base_cleaner.py  test_defects_cleaner.py  test_maintenance_logs_cleaner.py  test_quality_checks_cleaner.py
